[gd_scene load_steps=31 format=2]

[ext_resource path="res://textures/icon.png" type="Texture" id=1]
[ext_resource path="res://Control/interface/Character.gd" type="Script" id=2]
[ext_resource path="res://textures/heart.png" type="Texture" id=3]
[ext_resource path="res://Model/Characters/Warrior/Idle (2).png" type="Texture" id=4]
[ext_resource path="res://Model/Characters/Mr I/Mr I.png" type="Texture" id=5]
[ext_resource path="res://textures/flame.png" type="Texture" id=6]
[ext_resource path="res://Model/Characters/Warrior/Idle (9).png" type="Texture" id=7]
[ext_resource path="res://Model/Characters/Warrior/Idle (3).png" type="Texture" id=8]
[ext_resource path="res://Model/Characters/Warrior/Idle (5).png" type="Texture" id=9]
[ext_resource path="res://Model/Characters/Warrior/Idle (10).png" type="Texture" id=10]
[ext_resource path="res://Model/Characters/Warrior/Idle (1).png" type="Texture" id=11]
[ext_resource path="res://Model/Characters/Warrior/Idle (6).png" type="Texture" id=12]
[ext_resource path="res://Model/Characters/Warrior/Idle (7).png" type="Texture" id=13]
[ext_resource path="res://Model/Characters/Warrior/Idle (8).png" type="Texture" id=14]
[ext_resource path="res://Model/Characters/Warrior/Idle (4).png" type="Texture" id=15]
[ext_resource path="res://Model/Characters/HumbleB/bee_spritesheet.png" type="Texture" id=16]
[ext_resource path="res://Model/Characters/RiderRabbit/RabbitRun2.png" type="Texture" id=17]
[ext_resource path="res://Model/Characters/RiderRabbit/RabbitRun3.png" type="Texture" id=18]
[ext_resource path="res://Model/Characters/RiderRabbit/RabbitRun1.png" type="Texture" id=19]
[ext_resource path="res://textures/speechBubble.png" type="Texture" id=20]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 60, 26, 30 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 26, 60, 26, 30 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 52, 60, 26, 30 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 78, 60, 26, 30 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 104, 60, 26, 30 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 286, 60, 26, 30 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 31.2366, 32.2275 )

[node name="Character" type="KinematicBody2D"]
position = Vector2( 127.875, 540.068 )
script = ExtResource( 2 )

[node name="GodotSprite" type="Sprite" parent="."]
position = Vector2( -0.250336, -0.751038 )
texture = ExtResource( 1 )

[node name="MrISprite" type="Sprite" parent="."]
position = Vector2( 1.63672, -8.40723 )
scale = Vector2( 0.0491765, 0.0551799 )
texture = ExtResource( 5 )

[node name="HBSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.70687, -8.04667 )
scale = Vector2( 3.3696, 2.77188 )
frames = SubResource( 7 )
frame = 1
playing = true
flip_h = true

[node name="RRSprite" type="AnimatedSprite" parent="."]
position = Vector2( 6.5836, -0.731506 )
scale = Vector2( 1.67817, 1.51053 )
frames = SubResource( 8 )
playing = true

[node name="SSSprite" type="AnimatedSprite" parent="."]
position = Vector2( 6.4165, -8.2478 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 9 )
animation = "idle"
frame = 8
playing = true

[node name="healthBar" type="HBoxContainer" parent="."]
margin_left = -117.042
margin_top = -79.5664
margin_right = 23279.0
margin_bottom = 4596.43
grow_horizontal = 2
rect_scale = Vector2( 0.01, 0.01 )
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="health4" type="TextureRect" parent="healthBar"]
margin_right = 4676.0
margin_bottom = 4676.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="health2" type="TextureRect" parent="healthBar"]
margin_left = 4680.0
margin_right = 9356.0
margin_bottom = 4676.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="health1" type="TextureRect" parent="healthBar"]
margin_left = 9360.0
margin_right = 14036.0
margin_bottom = 4676.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="health3" type="TextureRect" parent="healthBar"]
margin_left = 14040.0
margin_right = 18716.0
margin_bottom = 4676.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="health5" type="TextureRect" parent="healthBar"]
margin_left = 18720.0
margin_right = 23396.0
margin_bottom = 4676.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.363052, 0.487732 )
shape = SubResource( 10 )

[node name="PowerButton" type="TextureButton" parent="."]
visible = false
margin_left = -24.4553
margin_top = -146.1
margin_right = 464.545
margin_bottom = 477.9
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeechBubble" type="TextureRect" parent="."]
visible = false
margin_left = -1.05643
margin_top = -135.736
margin_right = 72.9436
margin_bottom = -70.7356
rect_scale = Vector2( 3, 1.5 )
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speech" type="Label" parent="SpeechBubble"]
margin_left = 8.87421
margin_top = 5.11325
margin_right = 125.874
margin_bottom = 80.1133
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Seriously? Do you expect me to say something?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PowerButton" to="." method="_on_PowerButton_pressed"]
